recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:10: error: not found: value head
  return min(head::tail)
             ^Min:10: error: not found: value tail
  return min(head::tail)
                   ^